--- a/ui/src/app/components/community-card/community-card.component.html
+++ b/ui/src/app/components/community-card/community-card.component.html
@@ -17,9 +17,9 @@
           </li>
         </ul>
         <ul *ngIf="!textCollapsed" class="list-inline">
-          <li class="list-inline-item"> creator: <span class="text-success">{{community.creator.name}}</span></li>
+          <li class="list-inline-item"> creator: <span class="tag tag-success">{{community.creator.name}}</span></li>
           <li class="list-inline-item" *ngIf="community.moderators.length > 0"> moderators: </li>
-          <li class="list-inline-item text-warning" *ngFor="let moderator of community.moderators">{{moderator.name}}</li>
+          <li class="list-inline-item tag tag-warning" *ngFor="let moderator of community.moderators">{{moderator.name}}</li>
         </ul>
       </small>
         <small class="text-muted">
