Altering ts interfaces to account for modifiedByUser, altering some templates.

--- a/ui/src/app/components/comment/comment.component.html
+++ b/ui/src/app/components/comment/comment.component.html
@@ -3,13 +3,13 @@
     <li class="text-muted list-inline-item" role="button"
       (click)="collapsed = !collapsed">{{collapseText()}}</li>
     <li class="list-inline-item"
-      [ngClass]="{'tag-success':isCommunityCreator(), 'tag-warning': isCommunityModerator(), 'tag-primary': isDiscussionCreator(), 'tag': !isDiscussionUser(), 'text-primary': isDiscussionUser()}">{{comment.userName}}</li>
+      [ngClass]="{'tag-success':isCommunityCreator(), 'tag-warning': isCommunityModerator(), 'tag-primary': isDiscussionCreator(), 'tag': !isDiscussionUser(), 'text-primary': isDiscussionUser()}">{{comment.user.name}}</li>
     <li *ngIf="comment.avgRank" class="tag tag-pill tag-default list-inline-item"
       tooltipPlacement="bottom" tooltip="Average Score">{{comment.avgRank}}</li>
     <li *ngIf="rank" class="tag tag-pill tag-info list-inline-item"
       tooltipPlacement="bottom" tooltip="Your Vote">{{rank}}</li>
     <li *ngIf="comment.avgRank" class="text-muted list-inline-item"><small>{{comment.numberOfVotes}} votes</small></li>
-    <li *ngIf="comment.deleted" class="text-muted list-inline-item"><small><i>deleted {{comment.modified | moment}}</i></small></li>
+    <li *ngIf="comment.deleted" class="text-muted list-inline-item"><small><i>deleted {{comment.modified | moment}} by {{comment.modifiedByUser.name}}</i></small></li>
     <span *ngIf="!comment.deleted">
       <li *ngIf="!comment.modified" class="text-muted list-inline-item"><small>{{comment.created | moment}}</small></li>
       <li *ngIf="comment.modified" class="text-muted list-inline-item"><small><i>modified {{comment.modified | moment}}</i></small></li>
@@ -34,7 +34,7 @@
   <small *ngIf="!showReply && !showEdit">
     <ul class="list-inline">
       <span *ngIf="!comment.deleted">
-      <li *ngIf="userService.getUser().id != comment.userId" role="button" class="list-inline-item" (click)="toggleShowVoteSlider()">
+      <li *ngIf="userService.getUser().id != comment.user.id" role="button" class="list-inline-item" (click)="toggleShowVoteSlider()">
         <i class="fa fa-fw fa-star-half-o" tooltipPlacement="bottom" tooltip="Vote"></i>
       </li>
       <li role="button" class="list-inline-item" (click)="toggleShowReply()">
