--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -1,12 +1,15 @@
-<div class="row bottom-margin">
-  <div *ngIf="discussion" class="col-xs-12 col-lg-10" (window:scroll)="onScroll($event)">
+<div class="row bottom-margin" (window:scroll)="onScroll($event)">
+  <div *ngIf="discussion" class="col-xs-12 col-lg-10">
     <app-discussion-card [discussion]="discussion"
-      [editMode]="editMode()"></app-discussion-card>
-    <div *ngFor="let comment of comments" class="card">
-      <app-comment [comment]="comment" [discussion]="discussion" (replyingEvent)="setIsReplying($event)"></app-comment>
+      [(editing)]="editing"></app-discussion-card>
+    <div *ngIf="!editing">
+      <div *ngFor="let comment of comments" class="card">
+        <app-comment [comment]="comment" [discussion]="discussion"
+          (replyingEvent)="setIsReplying($event)"></app-comment>
+      </div>
+      <i *ngIf="!comments" class="fa fa-circle-o-notch fa-spin fa-5x text-xs-center block"></i>
+      <h4 *ngIf="comments?.length == 0">No Comments</h4>
     </div>
-    <i *ngIf="!comments" class="fa fa-circle-o-notch fa-spin fa-5x text-xs-center block"></i>
-    <h4 *ngIf="comments?.length == 0">No Comments</h4>
   </div>
   <div class="col-xs-12 col-lg-2">
     <div class="card">
