--- a/ui/src/app/components/community-card/community-card.component.html
+++ b/ui/src/app/components/community-card/community-card.component.html
@@ -1,10 +1,10 @@
 <div class="card">
   <div *ngIf="!community.deleted">
-    <div *ngIf="!editMode">
+    <div *ngIf="!editing">
       <div class="card-block card-block-no-bottom">
         <h4 class="card-title">
           <span role="button" class="link-unstyled" (click)="toggleCollapseText()" tooltipPlacement="bottom" tooltip="Show/Hide Text">{{community.name}}</span>
-          <small *ngIf="isModerator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
+          <small *ngIf="isModerator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditing()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
         </h4>
       </div>
       <div class="card-block card-block-no-top">
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="editMode">
+    <div *ngIf="editing">
       <form #communityForm="ngForm" class="card-block">
         <div *ngIf="isCreator" class="form-group row">
           <label class="col-sm-1 form-control-label">Name</label>
@@ -221,7 +221,7 @@
             <span *ngIf="!isSaving">Save</span>
             <span *ngIf="isSaving">Saving<i class="fa fa-fw fa-circle-o-notch fa-spin"></i></span>
           </button>
-          <button type="button" (click)="toggleEditMode()"
+          <button type="button" (click)="toggleEditing()"
             class="btn btn-warning">Cancel</button>
           <button *ngIf="isCreator" type="button" (click)="deleteCommunity()"
             class="btn btn-danger">Delete</button>
