--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -1,10 +1,10 @@
 <div class="card">
   <div *ngIf="!discussion.deleted">
-    <div *ngIf="!editMode">
+    <div *ngIf="!editing">
       <div class="card-block card-block-no-bottom">
         <h4 class="card-title">
           <a [routerLink]="['/discussion', discussion.id]" class="link-unstyled">{{discussion.title}} </a>
-          <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
+          <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditing()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
         </h4>
       </div>
       <a *ngIf="discussion.link && isImageType(discussion.link)"
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="editMode">
+    <div *ngIf="editing">
       <form #discussionForm="ngForm" class="card-block">
         <div class="form-group row">
           <label class="col-sm-2 form-control-label">Title</label>
@@ -235,7 +235,7 @@
             <span *ngIf="!isSaving">Save</span>
             <span *ngIf="isSaving">Saving<i class="fa fa-fw fa-circle-o-notch fa-spin"></i></span>
           </button>
-          <button type="button" (click)="toggleEditMode()"
+          <button type="button" (click)="toggleEditing()"
             class="btn btn-warning">Cancel</button>
           <button type="button" (click)="deleteDiscussion()"
             class="btn btn-danger">Delete</button>
