--- a/ui/src/app/components/footer/footer.component.html
+++ b/ui/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div>
   <hr class="featurette-divider">
   <footer>
-    <p class="pull-right"><a href="#">back to top</a>
+    <p class="pull-right"><a href="#">back to home</a>
     </p>
     <p>© 2016 Flow, Inc. · <a href="https://github.com/tchoulihan/flowchat"
         target="_blank">about</a> · <a href="https://github.com/tchoulihan/flowchat"
