--- a/ui/src/app/components/community-modlog/community-modlog.component.html
+++ b/ui/src/app/components/community-modlog/community-modlog.component.html
@@ -1,7 +1,8 @@
 <div class="modRow">
   <div class="col-xs-12">
     <div *ngFor="let modRow of modlog">
-      <span class="text-muted">{{modRow.action_tstamp | moment}}</span>
+      <span class="text-muted">{{modRow.action_tstamp | moment}} &mdash;</span>
+      <span class="text-primary">{{modRow.modified_by_user_name}}</span>
       <span [ngSwitch]="modRow.action">
       	<span *ngSwitchCase="'I'">added</span>
       	<span *ngSwitchCase="'U'">altered</span>
@@ -9,11 +10,14 @@
       </span>
       <span [ngSwitch]="modRow.table_name">
         <span *ngSwitchCase="'discussion'">
-          a <a [routerLink]="['/discussion', modRow.discussion_id]">{{modRow.table_name}}</a>
+          {{modRow.table_name}} 
+          <a [routerLink]="['/discussion', modRow.discussion_id]">{{modRow.discussion_title}}</a>
         </span>
         <span *ngSwitchCase="'comment'">
           <span class="text-primary">{{modRow.user_name}}'s</span>
           <a [routerLink]="['/discussion', modRow.discussion_id, 'comment', modRow.id]">{{modRow.table_name}}</a>
+          in 
+          <a [routerLink]="['/discussion', modRow.discussion_id]">{{modRow.discussion_title}}</a>
         </span>
         <span *ngSwitchCase="'community_user'">
           <span class="text-primary">{{modRow.user_name}}</span>        to the community
@@ -21,4 +25,5 @@
       </span>
     </div>
   </div>
+  <app-footer></app-footer>
 </div>
