--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-11 col-xs-12">
+<div>
   <div class="row">
     <div class="col-xs-12" [class.col-md-10]="!editing">
       <app-community-card *ngIf="community" [community]="community"
