Fixing styling on home and tag pages.

--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-11 col-xs-12">
+<div>
   <div class="row">
     <div class="col-xs-12 col-md-10">
       <h2 *ngIf="tag">#{{tag.name}}</h2>
