Got upgraded webpack working.

--- a/ui/src/app/styles/vendor.scss
+++ b/ui/src/app/styles/vendor.scss
@@ -1,6 +1,6 @@
 @import './custom';
 @import './extras';
-@import '../../../node_modules/bootstrap/scss/bootstrap-flex';
+@import '../../node_modules/bootstrap/scss/bootstrap-flex';
 @import './card-columns';
 @import './slider';
 @import '../../../node_modules/angular2-toaster/lib/toaster';
