--- a/ui/src/app/components/navbar/navbar.component.scss
+++ b/ui/src/app/components/navbar/navbar.component.scss
@@ -15,12 +15,14 @@
 }
 
 .messages-dropdown {
+  top: 50px;
   left: -400px;
   width: 435px;
 }
 
 .user-dropdown {
-  left: -60px;
+  top: 50px;
+  left: -100px;
 }
 
 .navbar-label {
