--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -4,18 +4,7 @@
       <h2 *ngIf="tag">#{{tag.name}}</h2>
     </div>
     <div class="col-xs-12 col-md-2">
-      <select [ngModel]="sorting" (ngModelChange)="resort($event)"
-        class="form-control">
-        <option disabled>Sorting</option>
-        <option disabled>──────────</option>
-        <option value="modified__desc">New</option>
-        <option value="time-3600">Hour</option>
-        <option value="time-86400">Day</option>
-        <option value="time-604800">Week</option>
-        <option value="time-2628000">Month</option>
-        <option value="time-31540000">Year</option>
-        <option value="avg_rank__desc">All-Time</option>
-      </select>
+      <app-discussion-card-select (selectChange)="resort($event)"></app-discussion-card-select>
     </div>
   </div>
   <small *ngIf="communities?.length > 0">
