--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -31,7 +31,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <i *ngIf="!discussions" class="fa fa-circle-o-notch fa-spin fa-5x text-xs-center block"></i>
+      <i *ngIf="loadingDiscussions" class="fa fa-circle-o-notch fa-spin fa-5x text-xs-center block"></i>
       <h4 *ngIf="discussions?.length == 0">Subscribe to some communities such as <a class="link-unstyled tag tag-primary" [routerLink]="['/community', 1]">vanilla</a> to see discussions</h4>
     </div>
   </div>
