--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -5,14 +5,15 @@
         [(editing)]="editing"></app-community-card>
     </div>
     <div *ngIf="!editing" class="col-xs-12 col-md-2">
-      <app-discussion-card-select (selectChange)="resort($event)"></app-discussion-card-select>
+      <app-discussion-card-view-type-select [(viewType)]="viewType"></app-discussion-card-view-type-select>
+      <app-discussion-card-sort-select (selectChange)="resort($event)"></app-discussion-card-sort-select>
     </div>
   </div>
   <div *ngIf="!editing">
-    <div class="card-deck-wrapper">
-      <div (window:scroll)="onScroll($event)" class="card-deck">
-        <app-discussion-card class="col-md-4" *ngFor="let discussion of discussions"
-          [discussion]="discussion"></app-discussion-card>
+    <div [class.card-deck-wrapper]="isCard()">
+      <div (window:scroll)="onScroll($event)" [ngClass]="{'card-deck': isCard(), 'list-group': !isCard()}">
+        <app-discussion-card [viewType]="viewType" [ngClass]="{'col-md-4': isCard()}"
+          *ngFor="let discussion of discussions" [discussion]="discussion"></app-discussion-card>
       </div>
     </div>
     <div class="row">
