--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -1,21 +1,44 @@
-<div class="card">
+<div [class.card]="isCard()" [class.list-group-item]="!isCard()">
   <div *ngIf="!discussion.deleted">
     <div *ngIf="!editing">
-      <div class="card-block card-block-no-bottom">
-        <h4 class="card-title">
-          <a [routerLink]="['/discussion', discussion.id]" class="link-unstyled">{{discussion.title}} </a>
-          <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditing()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
-        </h4>
-      </div>
-      <a *ngIf="discussion.link && isImageType(discussion.link)"
+      <div [ngClass]="{'row': !isCard() && hasImage(), 'row-fluid': !isCard() && !hasImage()}">
+      <div [ngClass]="{'col-xs-2': !isCard() && hasImage(),
+           'col-xl-1': !isCard() && hasImage()}">
+      <a *ngIf="!isCard() && hasImage()"
         href="{{discussion.link}}" target="_blank">
         <div [innerHTML]="discussion.link | markdown"></div>
       </a>
-      <div class="card-block card-block-no-top">
+      </div>
+      <div [ngClass]="{'col-xs-10': !isCard() && hasImage(),
+           'col-xl-11': !isCard() && hasImage()}">
+      <div [ngClass]="{
+        'card-block': isCard(),
+        'card-block-no-bottom': isCard()}">
+        <h5 [class.card-title]="isCard()">
+          <a [routerLink]="['/discussion', discussion.id]" class="link-unstyled">{{discussion.title}} </a>
+          <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditing()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
+        </h5>
+      </div>
+      <a *ngIf="isCard() && hasImage()"
+        href="{{discussion.link}}" target="_blank">
+        <div [innerHTML]="discussion.link | markdown"></div>
+      </a>
+      <div [ngClass]="{
+        'card-block': isCard(),
+        'card-block-no-top': isCard()}">
         <p *ngIf="discussion.text" class="card-text"
           [innerHTML]="discussion.text | markdown"></p>
         <small>
         <ul class="list-inline">
+          <li class="list-inline-item">
+            <span class="text-muted">
+              <span *ngIf="!discussion.modified">created {{discussion.created | moment}}</span>
+              <span *ngIf="discussion.modified"><i>modified {{discussion.modified | moment}}</i></span>
+              by
+              <a [routerLink]="['/user', discussion.creator.id]" class="link-unstyled" >{{discussion.creator.name}}</a>
+              in
+            </span>
+          </li>
           <li *ngIf="discussion.community" class="tag tag-primary list-inline-item">
             <a class="link-unstyled" [routerLink]="['/community', discussion.community.id]">{{removeQuotes(discussion.community.name)}}</a>
           </li>
@@ -24,12 +47,7 @@
           </li>
         </ul>
       </small>
-        <small class="text-muted">
-        <span *ngIf="!discussion.modified">created {{discussion.created | moment}}</span>
-        <span *ngIf="discussion.modified"><i>modified {{discussion.modified | moment}}</i></span>
-          by 
-          <a [routerLink]="['/user', discussion.creator.id]" class="link-unstyled" >{{discussion.creator.name}}</a>
-      </small>
+      
         <ul class="list-inline">
           <li *ngIf="discussion.private_" class="tag tag-danger list-inline-item">Private</li>
           <li *ngIf="!isCreator" role="button" class="list-inline-item"
@@ -67,6 +85,8 @@
             type="range" min="0" max="100"
             step="1" (value)="discussion.userRank"
             name="discussion_rank" />
+        </div>
+        </div>
         </div>
       </div>
     </div>
