--- a/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
+++ b/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
@@ -1,4 +1,4 @@
-<select [ngModel]="defaultSort" (ngModelChange)="changeEvent($event)"
+<select [ngModel]="sortType" (ngModelChange)="changeEvent($event)"
   class="form-control discussion-card-select">
   <option disabled>Sorting</option>
   <option disabled>──────────</option>
