--- a/ui/src/app/components/footer/footer.component.html
+++ b/ui/src/app/components/footer/footer.component.html
@@ -3,10 +3,10 @@
   <footer>
     <p class="pull-right"><a href="#">back to home</a>
     </p>
-    <p>© 2016 Flow, Inc. · <a href="https://github.com/tchoulihan/flowchat"
-        target="_blank">about</a> · <a href="https://github.com/tchoulihan/flowchat"
-        target="_blank">contact</a> · <a href="https://github.com/tchoulihan/flowchat"
-        target="_blank">support</a> · <a href="https://github.com/tchoulihan/flowchat"
+    <p>© 2016 Flow, Inc. · <a href="https://github.com/dessalines/flowchat"
+        target="_blank">about</a> · <a href="https://github.com/dessalines/flowchat"
+        target="_blank">contact</a> · <a href="https://github.com/dessalines/flowchat"
+        target="_blank">support</a> · <a href="https://github.com/dessalines/flowchat"
         target="_blank">github</a> · <a href="https://www.reddit.com/r/flowchat/">subreddit</a>
       <br>
     </p>
