--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,41 +1,53 @@
 <div>
+  <app-onboard-alert *ngIf="!userService.getUser().settings.readOnboardAlert"></app-onboard-alert>
   <div class="row">
-    <div class="col-xs-12 col-md-8 trending-discussions">
+    <div class="col-xs-12 col-md-8 trending-discussions ">
       <h3>Trending Discussions</h3>
       <small>
-        <ul *ngIf="popularTags" class="list-inline">trending tags:
-          <li class="tag tag-default list-inline-item"
-          *ngFor="let tag of popularTags">
-            <a class="link-unstyled" [routerLink]="['/tag', tag.id]">{{removeQuotes(tag.name)}}</a>
+        <ul *ngIf="popularTags " class="list-inline ">trending tags:
+          <li class="tag tag-default list-inline-item "
+          *ngFor="let tag of popularTags ">
+            <a class="link-unstyled
+        " [routerLink]="[ '/tag', tag.id] ">{{removeQuotes(tag.name)}}</a>
           </li>
         </ul>
       </small>
       <small>
-        <ul *ngIf="popularCommunities" class="list-inline">trending communities:
-          <li class="tag tag-primary list-inline-item"
-          *ngFor="let community of popularCommunities">
-            <a class="link-unstyled" [routerLink]="['/community', community.id]">{{removeQuotes(community.name)}}</a>
+        <ul *ngIf="popularCommunities " class="list-inline ">trending communities:
+          <li class="tag tag-primary list-inline-item "
+          *ngFor="let community of popularCommunities ">
+            <a class="link-unstyled
+        " [routerLink]="[ '/community', community.id] ">{{removeQuotes(community.name)}}</a>
           </li>
         </ul>
       </small>
     </div>
-    <div class="col-xs-12 col-md-2">
-      <app-discussion-card-view-type-select [(viewType)]="viewType"></app-discussion-card-view-type-select>
+    <div class="col-xs-12 col-md-2
+        ">
+      <app-discussion-card-view-type-select [(viewType)]="viewType "></app-discussion-card-view-type-select>
     </div>
-    <div class="col-xs-12 col-md-2">
-      <app-discussion-card-sort-select [sortType]="sortType" (sortTypeChange)="resort($event)"></app-discussion-card-sort-select>
-    </div>
-  </div>
-  <div [class.card-deck-wrapper]="isCard()">
-    <div (window:scroll)="onScroll($event)" [ngClass]="{'card-deck': isCard(), 'list-group': !isCard()}">
-      <app-discussion-card [viewType]="viewType" [ngClass]="{'col-md-4': isCard()}" *ngFor="let discussion of discussions"
-        [discussion]="discussion"></app-discussion-card>
+    <div class="col-xs-12 col-md-2
+        ">
+      <app-discussion-card-sort-select [sortType]="sortType "
+        (sortTypeChange)="resort($event) "></app-discussion-card-sort-select>
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <i *ngIf="loadingDiscussions" class="fa fa-circle-o-notch fa-spin fa-5x text-xs-center block"></i>
-      <h4 *ngIf="discussions?.length == 0">Subscribe to some communities such as <a class="link-unstyled tag tag-primary" [routerLink]="['/community', 1]">vanilla</a> to see discussions</h4>
+  <div [class.card-deck-wrapper]="isCard() ">
+    <div (window:scroll)="onScroll($event)
+        " [ngClass]="{ 'card-deck': isCard(), 'list-group': !isCard()} ">
+      <app-discussion-card [viewType]="viewType
+        " [ngClass]="{ 'col-md-4': isCard()} "
+        *ngFor="let discussion of discussions
+        " [discussion]="discussion "></app-discussion-card>
+    </div>
+  </div>
+  <div class="row ">
+    <div class="col-xs-12 ">
+      <i *ngIf="loadingDiscussions " class="fa fa-circle-o-notch
+        fa-spin fa-5x text-xs-center block "></i>
+      <h4 *ngIf="discussions?.length==0
+        ">Subscribe to some communities such as <a class="link-unstyled tag tag-primary
+        " [routerLink]="[ '/community', 1] ">vanilla</a> to see discussions</h4>
     </div>
   </div>
   <app-footer></app-footer>
