--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -8,7 +8,7 @@
           (replyingEvent)="setIsReplying($event)"></app-comment>
       </div>
       <i *ngIf="!comments" class="fa fa-circle-o-notch fa-spin fa-5x text-xs-center block"></i>
-      <h4 *ngIf="comments?.length == 0">No Comments</h4>
+      <h4 *ngIf="comments?.length == 0">Comment on the bottom bar...</h4>
     </div>
   </div>
   <div class="col-xs-12 col-lg-2">
