--- a/ui/src/app/components/discussion-card/discussion-card.component.scss
+++ b/ui/src/app/components/discussion-card/discussion-card.component.scss
@@ -1,7 +1,12 @@
 .card-block-no-bottom {
   padding-bottom: 2px;
+  margin-bottom: 0px;
 }
 
 .card-block-no-top {
   padding-top: 2px;
+}
+
+.list-group-item {
+  padding: 0.5rem 1.25rem;
 }
