--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -25,15 +25,18 @@
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
-.card:hover {
-  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+app-discussion-card,
+app-community-card,
+app-sidebar
+{
+  .card:hover {
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+  }
 }
 
 .label {
   vertical-align: middle;
 }
-
-
 
 .truncate {
   display: inline-block;
@@ -147,8 +150,11 @@ a {
   border-top-width: 0;
 }
 
-button, html [type="button"], [type="reset"], [type="submit"] {
-    -webkit-appearance: none !important;
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: none !important;
 }
 
 .block {
