--- a/ui/src/app/components/sidebar/sidebar.component.html
+++ b/ui/src/app/components/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
       <a [routerLink]="['/discussion', discussion.id]"
         class="link-unstyled">{{discussion.title}}</a>
       <span role="button" (click)="userService.removeFavoriteDiscussion(discussion.id)"
-        class="remove-btn fa fa-fw fa-remove pull-xs-right"></span>
+        class="remove-btn fa fa-fw fa-remove float-xs-right"></span>
     </li>
   </ul>
 </div>
