--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-full navbar-light">
-  <button (click)="toggleCollapseNavbar()" class="navbar-toggler hidden-md-up" type="button">
-    &#9776;
-  </button>
+  <button (click)="toggleCollapseNavbar()" class="navbar-toggler hidden-md-up" type="button"></button>
   <div [class.collapse]="collapseNavbar" class="collapse navbar-toggleable-sm">
     <div>
       <a class="navbar-brand" [routerLink]="['/']"><i class="fa fa-fw fa-comment-o"></i>&nbsp;FlowChat</a>
